--- a/re-platform-ztmfbr-af-xml-senddata-tmf.csproj
+++ b/re-platform-ztmfbr-af-xml-senddata-tmf.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
-    <RootNamespace>ZTMFBR_AF_Xml_SendData_Tmf</RootNamespace>
+    <RootNamespace>re-platform-ztmfbr-af-xml-senddata-tmf</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.3" />
